# graduation_project

./: .dockerignore  .gitignore  CONFIGURATION_GUIDE.md  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  README.md  analyze_pipeline_results.py  ankara_bus_stops_10.csv  bus_management.py  column_eraser.py  custom_pipeline_config.json  debug_prediction_issue.py  docker-compose.yml  ga_optimize.py  generate_optimized_passenger_flow.py  hybrid_model.py  lstm.py  lstm_model.py  main_script.py  optimization_evaluation.py  optimization_pipeline.py  passenger_flow_debugger.py  passenger_generator.py  prophet_model.py  prophet_predictor.py  pyproject.toml  requirements.txt  schedule_generator.py  setup.py  simulation_engine.py  test_integration.py  test_optimized_passenger_flow.csv  test_passenger_flow_generator.py  test_prediction_only.py  transit_network.py
bus_evaluation_pipeline/: .gitignore  README.md  pyproject.toml
bus_evaluation_pipeline/scripts/: test_evaluation.py
bus_evaluation_pipeline/src/: __init__.py
bus_evaluation_pipeline/src/evaluation_engine/: __init__.py  optimization_evaluator.py
bus_optimization_pipeline/: .gitignore  LICENSE  PACKAGE_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.py
bus_optimization_pipeline/config/: optimization_config.yaml
bus_optimization_pipeline/pipeline/: optimization_runner.py
bus_optimization_pipeline/scripts/: test_1week_simulation.py  test_optimization.py
bus_optimization_pipeline/src/: __init__.py
bus_optimization_pipeline/src/optimization/: __init__.py  ga_optimize.py  optimization_evaluation.py  optimize_all_lines.py
bus_optimization_pipeline/src/utils/: __init__.py
bus_prediction_pipeline/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
bus_prediction_pipeline/data/: ankara_bus_stops.csv
bus_prediction_pipeline/scripts/: test_package.py
bus_prediction_pipeline/src/: __init__.py
bus_prediction_pipeline/src/prediction_models/: __init__.py  hybrid_model.py  lstm_model.py  prophet_model.py
bus_simulation_pipeline/: .gitignore  MANIFEST.in
bus_simulation_pipeline/config/: simulation_config.yaml
bus_simulation_pipeline/docker/: Dockerfile
bus_simulation_pipeline/scripts/: run_simulation.py  setup_and_test.py
bus_simulation_pipeline/src/: __init__.py  transit_network.py
bus_simulation_pipeline/src/components/: __init__.py  bus_management.py  passenger_generator.py  transit_network.py
bus_simulation_pipeline/src/core/: data_models.py  (+1 more)
bus_simulation_pipeline/test_1week_output/: summary_statistics.json
bus_simulation_pipeline/test_output/: summary_statistics.json
bus_simulation_pipeline/tests/: test_integration_week.py  test_pipeline.py
config/: azure_config.yaml  simulation_config.yaml  test_config.yaml
docker/: Dockerfile  Dockerfile.local
main_pipeline/: integrated_pipeline.py  optimized_passenger_flow_generator.py
outputs/pipeline_run_quick_20250613_034256/: FINAL_PIPELINE_REPORT.md
outputs/pipeline_run_quick_20250613_035312/: FINAL_PIPELINE_REPORT.md
outputs/pipeline_run_quick_20250613_042324/: FINAL_PIPELINE_REPORT.md
pipeline/: __init__.py  azure_deployer.py  pipeline_runner.py
scripts/: deploy_to_azure.py  run_simulation.py  setup_and_test.py
src/: data_models.py  passenger_generator.py
src/components/: bus_management.py  passenger_generator.py  schedule_generator.py  transit_network.py
src/core/: __init__.py  simulation_engine.py
src/utils/: __init__.py
tests/: test_integration_week.py  test_pipeline.py
(+49 files in other folders)
